# NewEra

./: .gitignore  CHANGELOG.md  CLAUDE.md
tibia-bot/: .gitignore  Cargo.toml  LIVE_CALIBRATION.md  PRODUCTION_CHECKLIST.md  README.md  SECURITY.md  VULNERABILITIES.md
tibia-bot/arduino/: README.md
tibia-bot/arduino/tibia_hid_bridge/: tibia_hid_bridge.ino
tibia-bot/assets/: calibration.toml  pathfinding_overrides.toml.example
tibia-bot/assets/anchors/: README.md
tibia-bot/assets/catalogs/: cities.toml  hunts_10_50.toml  vocations.toml
tibia-bot/assets/catalogs/_audits/: pathfinding_audit_2026-04-19.md
tibia-bot/assets/cavebot/: abdendriel_wasps.toml  abdendriel_wasps_hunt_only.toml  abdendriel_wasps_walks_only.toml  ancient_scarabs_darashia.toml  asura_palace_low.toml  corym_mine_port_hope.toml  cyclops_edron.toml  drakens_edron_bottom.toml  dwarves_kazordoon.toml  example.toml  full_refill_example.toml  has_stack_example.toml  hero_cave_edron.toml  minos_plains_of_havoc.toml  multi_floor_hunt.toml  mutated_rats_yalahar.toml  mutated_tigers_yalahar.toml  node_test.toml  npc_dialog_test.toml  orcs_thais.toml  rotworms_darashia.toml  stand_test.toml  stone_golems_cormaya.toml  test_simple.toml  thais_hunt_refill_template.toml  thais_rats.toml  thais_rats_test.toml  thais_sewers.toml  trolls_thais.toml  water_elementals_portimi.toml
tibia-bot/assets/cavebot/_templates/: README.md  depot_base.toml  hunt_loop_base.toml  refill_base.toml
tibia-bot/assets/hunts/: abdendriel_wasps.toml  ancient_scarabs_darashia.toml  asura_palace_low.toml  corym_mine_port_hope.toml  cyclops_edron.toml  drakens_edron_bottom.toml  dwarves_kazordoon.toml  hero_cave_edron.toml  minos_plains_of_havoc.toml  mutated_rats_yalahar.toml  mutated_tigers_yalahar.toml  orcs_thais.toml  rotworms_darashia.toml  stone_golems_cormaya.toml  trolls_thais.toml  water_elementals_portimi.toml
tibia-bot/assets/scripts/: 00_cities.lua  99_sandbox_test.lua  advanced_healer.lua  anti_waste.lua  combat_aware_mana.lua  example_healer.lua  knight_hunt.lua  ui_aware_pauser.lua  zz_abdendriel_wasps_druid.lua
tibia-bot/assets/templates/inventory/: thresholds.toml
tibia-bot/assets/templates/status/: README.md
tibia-bot/assets/waypoints/: example.toml  walk_test_wasd.toml
tibia-bot/bot/: Cargo.toml  build.rs  config.toml.example
tibia-bot/bot/benches/: fase1_overhead.rs  pathfinding.rs  template_matching.rs
tibia-bot/bot/src/: config.rs  lib.rs  main.rs
tibia-bot/bot/src/act/: coords.rs  keycode.rs  mod.rs  pico_link.rs
tibia-bot/bot/src/cavebot/: hunt_profile.rs  mod.rs  parser.rs  runner.rs  step.rs
tibia-bot/bot/src/core/: fsm.rs  loop_.rs  mod.rs  spell_table.rs  state.rs
tibia-bot/bot/src/health/: gate.rs  mod.rs  system.rs
tibia-bot/bot/src/instrumentation/: histogram.rs  mod.rs  recorder.rs  registry.rs  tick.rs  window.rs
tibia-bot/bot/src/pathfinding/: astar.rs  mod.rs  overrides.rs  walkability.rs
tibia-bot/bot/src/remote/: http.rs
tibia-bot/bot/src/safety/: breaks.rs  human_noise.rs  mod.rs  rate_limit.rs  reaction.rs  session_limit.rs  timing.rs  variation.rs
tibia-bot/bot/src/scripting/: mod.rs
tibia-bot/bot/src/sense/: dataset_recorder.rs  filter.rs  frame_buffer.rs  metrics.rs  mod.rs  ndi_receiver.rs  perception.rs  recorder.rs
tibia-bot/bot/src/sense/vision/: anchors.rs  battle_list.rs  calibration.rs  color.rs  crop.rs  game_coords.rs  hp_mana.rs  inventory.rs  inventory_ml.rs  inventory_ocr.rs  inventory_slot.rs  loot.rs  minimap.rs  mod.rs  prompts.rs  region_monitor.rs  status_icons.rs  target.rs  templates.rs  ui_detector.rs
tibia-bot/bot/src/waypoints/: mod.rs
tibia-bot/bot/tests/: e2e_smoke.rs  fixture_vision.rs  integration_actuator_jitter.rs  proptest_cavebot.proptest-regressions  proptest_cavebot.rs
tibia-bot/bridge/: Cargo.toml  bridge_config.tom  bridge_config.toml.example
tibia-bot/bridge/src/: main.rs  sendinput.rs
tibia-bot/firmware/pico2_hid/: README.md  pico2_hid.ino
tibia-bot/ml/: .gitignore  README.md  requirements.txt  train_inventory_classifier.py
tibia-bot/monitoring/: docker-compose.yml  prometheus.yml
tibia-bot/monitoring/grafana/dashboards/: tibia-bot.json
tibia-bot/monitoring/grafana/provisioning/alerting/: tibia-bot-alerts.yml
tibia-bot/monitoring/grafana/provisioning/dashboards/: dashboards.yml
tibia-bot/scripts/: check_session.ps1  postmortem.ps1  regen_anchor.ps1  smoke_test.ps1  smoke_test.sh  start_session.ps1  stop_session.ps1
tibia-bot/test_smoke/: COVERAGE.md  fake_bridge.py  integration_results.json  integration_tests.py  smoke_config.toml
tibia-bot/tools/: fix_tibia_window.ahk  fix_tibia_window.ps1
