[workspace]
members  = ["bot", "bridge"]
resolver = "2"

[profile.release]
opt-level      = 3
lto            = "thin"
codegen-units  = 1

[workspace.package]
edition = "2021"
version = "0.1.0"

# Dependencias compartidas para evitar versiones divergentes entre crates.
[workspace.dependencies]
tokio              = { version = "1",    features = ["full"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml               = "0.8"
