[package]
name    = "tibia-bot"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "NewEra"
path = "src/main.rs"

[[bin]]
name = "calibrate"
path = "src/bin/calibrate.rs"

[[bin]]
name = "scan_rois"
path = "src/bin/scan_rois.rs"

[[bin]]
name = "inspect_pixel"
path = "src/bin/inspect_pixel.rs"

[[bin]]
name = "test_vision"
path = "src/bin/test_vision.rs"

[[bin]]
name = "diff_frames"
path = "src/bin/diff_frames.rs"

[[bin]]
name = "rgb_dump"
path = "src/bin/rgb_dump.rs"

[[bin]]
name = "make_anchors"
path = "src/bin/make_anchors.rs"

[[bin]]
name = "synth_frames"
path = "src/bin/synth_frames.rs"

[[bin]]
name = "build_map_index"
path = "src/bin/build_map_index.rs"

[[bin]]
name = "validate_templates"
path = "src/bin/validate_templates.rs"

[[bin]]
name = "lint_cavebot"
path = "src/bin/lint_cavebot.rs"

[[bin]]
name = "validate_hunt_profile"
path = "src/bin/validate_hunt_profile.rs"

[[bin]]
name = "validate_config"
path = "src/bin/validate_config.rs"

[[bin]]
name = "calibration_helper"
path = "src/bin/calibration_helper.rs"

[[bin]]
name = "replay_perception"
path = "src/bin/replay_perception.rs"

[[bin]]
name = "path_finder"
path = "src/bin/path_finder.rs"

[[bin]]
name = "stress_loop"
path = "src/bin/stress_loop.rs"

[[bin]]
name = "tune_inventory_strip"
path = "src/bin/tune_inventory_strip.rs"

[[bin]]
name = "debug_game_coords"
path = "src/bin/debug_game_coords.rs"

[[bin]]
name = "click_live"
path = "src/bin/click_live.rs"

[dependencies]
# ── Runtime async ────────────────────────────────────────────────────────────
tokio              = { workspace = true }

# ── Serialización ────────────────────────────────────────────────────────────
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }

# ── Errores y logging ────────────────────────────────────────────────────────
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# ── Concurrencia ─────────────────────────────────────────────────────────────
arc-swap           = "1"                  # ArcSwap<Frame>: acceso lock-free al último frame
parking_lot        = "0.12"              # RwLock más eficiente que el de std
crossbeam-channel  = "0.5"              # canales MPMC para comandos y eventos

# ── NDI (libloading — sin NDI SDK en compile time) ───────────────────────────
# Cargamos Processing.NDI.Lib.x64.dll (Linux: libndi.so) en runtime mediante
# libloading. No requiere NDI SDK instalado — solo el NDI Runtime/Tools.
libloading         = "0.8"

# ── HTTP server ──────────────────────────────────────────────────────────────
axum               = { version = "0.8", features = ["json"] }
tower              = "0.5"
tower-http         = { version = "0.6", features = ["cors"] }

# ── Imagen y visión ──────────────────────────────────────────────────────────
image              = "0.25"
base64             = "0.22"
imageproc          = "0.25"
bincode            = "1.3"               # serialización del map index para coords

# ── Calibración GUI ───────────────────────────────────────────────────────────
eframe             = "0.29"
egui               = "0.29"

# ── Scripting Lua ─────────────────────────────────────────────────────────────
# lua54 + vendored: compila Lua 5.4 desde source, no requiere Lua instalado
# en la máquina del usuario. Sin `send` feature porque el ScriptEngine vive
# exclusivamente dentro del thread del game loop.
mlua               = { version = "0.10", features = ["lua54", "vendored"] }

# ── Safety (Fase 5) ──────────────────────────────────────────────────────────
# Muestreo estadístico (distribuciones gaussianas) para humanización de timing.
# `rand_distr` añade distribución Normal sobre el `rand` core.
rand               = "0.8"
rand_distr         = "0.4"

# ── CLI tooling (solo binarios diagnósticos) ─────────────────────────────────
clap               = { version = "4", features = ["derive"] }

# ── HTTP client (blocking) — usado por bin `click_live` para hablar con el
# bot vía /test/* endpoints sin tocar PicoLink directamente.
# `rustls-tls` evita depender de OpenSSL del sistema (Windows cross-build).
reqwest            = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

[dev-dependencies]
tokio              = { workspace = true, features = ["test-util"] }
