[package]
name    = "pico-bridge"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "NewEra-bridge"
path = "src/main.rs"

[[bin]]
name = "recorder"
path = "src/bin/recorder.rs"

[dependencies]
# ── Runtime async ────────────────────────────────────────────────────────────
tokio              = { workspace = true }

# ── Serial port ──────────────────────────────────────────────────────────────
# tokio-serial = wrapper async sobre serialport-rs. Elegido sobre
# serialport puro porque encaja mejor con el runtime tokio sin bloquear.
tokio-serial       = "5"
serialport         = "4"

# ── Config ───────────────────────────────────────────────────────────────────
serde              = { workspace = true }
toml               = { workspace = true }

# ── Errores ───────────────────────────────────────────────────────────────────
anyhow             = { workspace = true }

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# ── Recorder (waypoint capture) ──────────────────────────────────────────────
rdev               = "0.5"
chrono             = "0.4"

# ── Focus detection + geometry query (Windows only) ──────────────
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",         # MonitorFromWindow for multi-display
] }
